--- a/css/page.auth.less
+++ b/css/page.auth.less
@@ -13,7 +13,7 @@ body > div.page.auth { background:url('../img/castle.blur.jpg') no-repeat center
 			}
 			&.footer { height:10%; background-color:rgba(255, 255, 255, 0.5);
 				.line { padding:0 5px; color:#888; }
-				a { font-size:14px }
+				a { font-size:14px; }
 			}
 		}
 	}
